--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,13 @@
   <body>
     <input type="text" id="search-box" />
     <ul class="country-list"></ul>
-    <div class="country-info"></div>
+    <div class="country-info">
+      <!-- <p class="country-name"><img src="" alt="" class="country-flag" /></p>
+      <p class="capital"><span class="info-type">Capital: </span></p>
+      <p class="population"><span class="info-type">Population: </span></p>
+      <p class="languages"><span class="info-type">Languages: </span></p> -->
+    </div>
 
-    <script src="index.js" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
   </body>
 </html>
